# AI-DS

10_LangGraph/: node.py  pyproject.toml
3_Fast API Pracitce/first-practice/: files.py  main.py  pyproject.toml
3_Fast API Pracitce/first-practice/jajja/uploads/: data.txt
4_Databases/Login Authentication/: alembic.ini  main.py  pyproject.toml
4_Databases/Login Authentication/alembic/versions/: 2dfffc332358_create_todos_table.py  31d22d5e7aa4_create_todos_table.py  4cf6befcea0e_create_todos_table.py  644811bda7b9_create_student_and_todo_table_in_neon4j.py  b207eb5d44bd_create_todos_table.py
4_Databases/Login Authentication/config/: database.py
4_Databases/Login Authentication/models/: student.py
4_Databases/Login Authentication/validations/: validations.py
4_Databases/SQL_Postgress/: .env  main.py  pyproject.toml
4_Databases/SQL_Postgress/alembic/: env.py
4_Databases/SQL_Postgress/alembic/versions/: 54f05454ce4c_add_completed_column_to_todosle.py  85888e658f0a_create_todos_table.py  9449f57cab63_completed_column_deletion_from_db.py  abfa63c84073_create_todos_table.py  df91c3993720_create_todos_table.py  fcfe5686f737_create_todos_table.py
4_Databases/SQL_Postgress_CRUD_Practice/: main.py  pyproject.toml
4_Databases/SQL_Postgress_CRUD_Practice/config/: database.py
4_Databases/SQL_Postgress_CRUD_Practice/models/: student.py
5_Data_Preprocessing/Model train assignment from scratch/Cancered Skin Detection/: train.py
5_Data_Preprocessing/Open CV/: main.ipynb
5_Data_Preprocessing/pandas/: covid19.py  main.py  stockmarket.py
7_LLM_and_Prompt_Engineering/: pyproject.toml
7_LLM_and_Prompt_Engineering/1_llm_basics/: 1_gemeni_llm.py  2_gemeni_llm_stream.py
7_LLM_and_Prompt_Engineering/2_llm_settings/: 1_llm_max_tokens.py  2_llm_temperature.py  3_llm_top_p.py
7_LLM_and_Prompt_Engineering/3_prompting_techniques/: 1_prompts_elements.py  2_zero_shots.py  3_few_shots.py  4_chain_of_thoughts.py  5_meta_prompting.py
8_OpenAI_Agent_SDK/: 10_mcp_agent_sse.py  1_basicAgent.py  2_streaming.py  3_structuredOutput.py  4_function_tools_Agent.py  4a_Agent_tools_example_todos_json_app.py  4b_agent_as_tool.py  4c_MongoDB_with_Agent.py  4d_github data_fetching  5_hosted_tools_agent.py  6_Agent_as_tool.py  7_local_context_agent.py  8_history_management.py  9_mcp_agent_stdio.py  README.md  pyproject.toml  todos.json
8_OpenAI_Agent_SDK/09_context_management/: 00_local_context.py  4_context_via_websearch
8_OpenAI_Agent_SDK/10_guardrails/: inputguardrails.py  output_guardrails.py
8_OpenAI_Agent_SDK/12_examples/: weather_agent.py
8_OpenAI_Agent_SDK/AeroPlane Agent/: .gitignore
8_OpenAI_Agent_SDK/AeroPlane Agent/backend/: agents_module.py  airline_agent.py  airline_agent_new.py  database.py  main.py  models.py  weather.py
8_OpenAI_Agent_SDK/AeroPlane Agent/frontend/: package-lock.json  package.json
8_OpenAI_Agent_SDK/AeroPlane Agent/frontend/src/: App.css  App.js  api.js
8_OpenAI_Agent_SDK/AeroPlane Agent/frontend/src/components/: ChatBox.js
8_OpenAI_Agent_SDK/AeroPlane Agent/frontend/src/utils/: api.js
9a_LangGraph/: .env  01_langgraph_basic_agent.py  01_langgraph_basic_agentb.py.py  02_langgraph_agent.py  04_langgraph_gemeni_agenticai_solar_rag.py  04_langgraph_gemeni_agenticai_solar_ragaaa.py  05_langraph_fastApi.py  pyproject.toml
9a_LangGraph/practice/: rag_with_langgraph.py
9a_LangGraph/practice/faiss_index/: index.faiss  index.pkl
Assignments/FastAPI_Assignment_1_Path_Query_Body_parameters/: database.py  main.py  models.py  pyproject.toml
DataBase/Login Authentication/: main.py  pyproject.toml
DataBase/Login Authentication/models/: student.py  todo.py
DataBase/Login Authentication/routes/: student.py  todo.py
DataBase/Login Authentication/utils/: auth_utils.py  utils_helper.py
DataBase/NoSQL_MongoDB/: main.py  pyproject.toml
DataBase/SQL_Postgress/: main.py  pyproject.toml
DataBase/SQL_Postgress/alembic/: env.py
DataBase/SQL_Postgress/config/: database.py
DataBase/SQL_Postgress/models/: todo_model.py
DataBase/SQL_Postgress_CRUD_Practice/: .env  alembic.ini  main.py  pyproject.toml
DataBase/SQL_Postgress_CRUD_Practice/alembic/: env.py
DataBase/SQL_Postgress_CRUD_Practice/config/: database.py
Data_Proprocessing/Model train assignment from scratch/: train.py
Data_Proprocessing/Model train assignment from scratch/Cancered Skin Detection/: main.py  pyproject.toml  train.py
Data_Proprocessing/Model train assignment from scratch/sparrow_crow_classifier/: pyproject.toml
Data_Proprocessing/Model train assignment from scratch/sparrow_crow_classifier/app/: main.py
Data_Proprocessing/Model train assignment from scratch/sparrow_crow_classifier/app/templates/: index.html
Data_Proprocessing/Model train assignment from scratch/sparrow_crow_classifier/scripts/: download_data.py  kaggle.json  maindataset.ipynb  prepare_data.py
Data_Proprocessing/Open CV/: main.ipynb  main.py
Fast API Pracitce/first Practice/: main.py  pyproject.toml
Fast API Pracitce/first Practice/FastApi/: new.py
Fast API Pracitce/first-practice/: exceptions.py  middleware.py  today.py
Projects/customer-service/: .env  agent.py  openai_agent.py  pyproject.toml
PythonLearning/Functions/: pro1.py  pro10.py  pro2.py  pro7.py  pro8.py  pro9.py
PythonLearning/conditionalStatementsAssignments/: pro1.py  pro10.py  pro11.py  pro12.py  pro13.py  pro14.py  pro15.py  pro16.py  pro17.py  pro18.py  pro19.py  pro2.py  pro20.py  pro3.py  pro4.py  pro5.py  pro6.py  pro7.py  pro8.py  pro9.py
PythonLearning/loops/: assignment.txt  pro1.py  pro16.py  pro17.py  pro18.py  pro2.py  pro3.py
(+4 files in other folders)
