[project]
name = "8-openai-agent-sdk"
version = "0.1.0"
description = ""
authors = [
  { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.8,<3.13"

dependencies = [
  "openai",
  "agents",
  "python-dotenv",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
