[project]
name = "8-openai-agent-sdk"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "openai (>=1.77.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "openai-agents (>=0.0.14,<0.0.15)",
    "regex (>=2024.11.6,<2025.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "tavily-python (>=0.7.3,<0.8.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pymongo[srv] (>=4.13.1,<5.0.0)",
    "dnspython (>=2.7.0,<3.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "8_openai_agent_sdk" }
]
